# TwinLiteNet-onnxruntime

./: CMakeLists.txt  README.md
include/: twinlitenet_onnxruntime.hpp
models/: best.onnx
src/: main.cpp  twinlitenet_onnxruntime.cpp
